...
                    .fontWeight(.thin)
            }
            .buttonStyle(.borderless)
            .alignmentGuide(.firstTextBaseline) { d in
                d[VerticalAlignment.center] + 5
            }
            .accessibilityIdentifier("item-checkbox")
            .accessibilityValue(item.isCompleted ? "checkmark.circle.fill" : "circle")

            ClickableTextField(
                text: $editingTitle,
                isCompleted: item.isCompleted,
                onEditingChanged: { editing, shouldCreateNewItem in
...
